# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md
2024/: CMakeLists.txt
2024/include/: day02.h  day03.h  day05.h  day07.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h
2024/inputs/: day07.txt  day10.txt  day11.txt  day12.txt  day16.txt  day17.txt  day19.txt
2024/src/: day01.c  day05.cpp  day06.c  day07.c  day08.cpp  day09.c  day10.cpp  day11.cpp  day12.cpp  day13.c  day14.cpp  day15.cpp  day16.cpp  day17.c  day18.cpp  day19.c  day20.cpp  main.cpp
include/: day01.h  day03.h  day04.h  day06.h  day08.h
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day06.c  main.cpp
